# FourthOrderMicromagneticSolver

./: .gitignore  CMakeLists.txt  README.md  Run.sh  Test.sh  Visualise.py  main.cpp  test.txt  testvectorfield.cpp  vectorfield.hpp
.github/workflows/: cmake.yml
src/: CMakeLists.txt  Constants.hpp  Evolve.hpp  FieldCalculate.hpp  IO.hpp  Initialise.hpp  Maths.hpp  VectorField.hpp  main.cpp
test/: CMakeLists.txt  Initialise_test.cpp  Maths_test.cpp  VectorField_test.cpp
